name:          gitwiki
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          gitwiki
    hs-source-dirs: src
    main-is:        gitwiki.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    other-modules:  Network.GitWiki
                  , Network.GitWiki.Css
                  , Network.GitWiki.Layout
                  , Network.GitWiki.Persistence
                  , Network.GitWiki.Types
                  , Paths_gitwiki
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , text == 1.2.2.1
                  , blaze-html == 0.8.1.3
                  , markdown == 0.1.16
                  , directory == 1.3.0.0
                  , filepath == 1.4.1.1
                  , process == 1.4.3.0
                  , MissingH == 1.4.0.1
                  , clay == 0.12.1
                  , split == 0.2.3.1
                  , wai-extra == 3.0.19.1
                  , securemem == 0.1.9
                  , time == 1.6.0.1
                  , bytestring == 0.10.8.1
                  , SHA == 1.6.4.2
                  , utf8-string == 1.0.1.1
